--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-elements": "^1.0.0",
-    "react-native-fontawesome": "^6.0.1",
     "react-native-loader": "^1.2.1",
-    "react-native-vector-icons": "^6.2.0",
-    "react-native-xml2js": "^1.0.3",
-    "react-navigation": "^3.1.4"
+    "react-native-xml2js": "^1.0.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
